--- a/client/src/app/market-map/market-map.component.html
+++ b/client/src/app/market-map/market-map.component.html
@@ -2,8 +2,8 @@
   <div class="map-frame">
     <div id="map">
       <div id="toolbar">
-        <button class="btn btn-secondary rounded-circle"><i class="fa fa-sliders"></i></button>
-        <button class="btn btn-secondary rounded-circle mr-2"><i class="fa fa-user"></i></button>
+        <button class="btn btn-secondary rounded-circle" (click)="openSettings()"><i class="fa fa-sliders"></i></button>
+        <button class="btn btn-secondary rounded-circle mr-2" (click)="locateMe()"><i class="fa fa-user"></i></button>
         <button class="btn btn-success title-button">Marktstand Heute</button>
       </div>
     </div>
