--- a/client/src/app/stand/stand-list.component.html
+++ b/client/src/app/stand/stand-list.component.html
@@ -3,7 +3,7 @@
     <tr *ngFor="let stand of stands">
       <td>{{stand.title}}</td>
       <td>{{stand.summary}}</td>
-      <td><a [routerLink]="[stand.id]"><i class="fa fa-edit"></i></a></td>
+      <td><a *ngIf="stand.id" [routerLink]="[stand.id]"><i class="fa fa-edit"></i></a></td>
     </tr>
   </tbody>
 </table>
