Angular 8->10 (for no reason in particular, this project is not actively maintained)

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,7 +2,7 @@
 $primary: #003a00;
 $secondary: white;
 @import "~bootstrap/scss/bootstrap";
-$fa-font-path: '../node_modules/font-awesome/fonts';
+$fa-font-path: '~node_modules/font-awesome/fonts';
 @import "~font-awesome/scss/font-awesome";
 
 /* You can add global styles to this file, and also import other style files */
